Potential fix for modal footer not being at the bottom on mobile

--- a/app/javascript/src/tailwind/components/modal.css
+++ b/app/javascript/src/tailwind/components/modal.css
@@ -12,5 +12,7 @@
 
   .title { @apply font-bold text-xl; }
   .modal-content { @apply text-base py-4; }
-  .modal-footer { @apply rounded text-right py-4 bg-grey-lighter -mb-4 -mx-6 px-6 py-4; }
+  .modal-footer {
+    @apply rounded text-right py-4 bg-grey-lighter -mx-6 px-6 py-4 absolute w-full;
+  }
 }
